# Gatra-comparison

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  statistical_significance.py
.claude/: settings.local.json
architecture_a_rl/: cli.py  env_bandit.py  networks.py  ppo.py  train.py
architecture_b_iforest/: cli.py  model.py  preprocess.py  train.py
codex_tasks/: v0.5.2_option2_meta_controller_resilience.md  v0.6.1_objective_normalization.md  v0.6_real_data_morl_objectives.md  v0.8_meta_selection_stability.md
configs/: data.yaml  data_bigquery_gatra_prd_c335.yaml  data_local_gatra_prd_c335.yaml  eval.yaml  iforest.yaml  join.yaml  meta_controller.yaml  meta_controller_relaxed.yaml  meta_stability.yaml  morl.yaml  morl_realdata.yaml  morl_realdata_normalized.yaml  policy_eval.yaml  ppo.yaml  robustness.yaml  robustness_label_delay_12h_benign.yaml  robustness_label_delay_7d_unknown.yaml  robustness_realism_off.yaml  serving.yaml
data/: bq.py  bq_loader.py  contract_cache.py  contract_export.py  csv_loader.py  features.py  join.py  loaders.py  schema_hash.py  schemas.py  splits.py  toy.py
docs/: 01_Technical_Documentation.docx  02_Technical_Support_Guide.docx  03_Operations_Maintenance_Guide.docx  bigquery_contract_views.md  generate_docs.py  morl.md  paper_week1_runbook.md  v0.10_option2_production_default.md
evaluation/: cli.py  drift.py  head_to_head.py  label_availability.py  meta_selection_report.py  meta_stability.py  metrics.py  morl_report.py  pareto.py  policy_eval.py  robustness.py  robustness_types.py  stats.py  variants.py
reports/: head_to_head_report.json
runs/: __init__.py  cli.py  reporting.py
scripts/: build_k_sweep.py  collect_paper_results.py  deploy_queue.sh  export_sanitized_artifacts.sh  paper_matrix.sh  pin_paper_evidence.sh  render_results_paragraph.py
serving/: adapters.py  contract.py  router.py  run.py  schema_hash.py
sql/: 10_deploy_prod_queue_top200.sql  20_verify_prod_queue.sql  30_deploy_safe_view.sql
streamlit_app/: Procfile  app.py  requirements.txt
tests/: test_bigquery_loader_mock.py  test_bq_loader.py  test_collect_paper_results_smoke.py  test_contract_cache.py  test_contract_export.py  test_csv_loader_and_splits.py  test_episode_sessionization.py  test_features.py  test_iforest_roundtrip.py  test_join_alarm_id.py  test_reward.py  (+25 more)
(+15 files in other folders)
